Worked on the quicklaunch ui and adding functions.

--- a/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
+++ b/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
@@ -1,22 +1,30 @@
 {
-	"Display Image": "{\"display_message\":\"A few moments later...\",\"font_path\":\"Data/Fonts/Cella.ttf\",\"font_size\":100,\"function\":21}",
-	"Display Text": "{\"display_message\":\"A few moments later...\",\"font_path\":\"Data/Fonts/Cella.ttf\",\"font_size\":100,\"function\":20}",
-	"Play Sound": "{\"function\":6}",
-	"Play Sound At Location": "{\"function\":6}",
-	"Play Sound Loop": "{\"function\":6}",
-    "Play Sound Loop At Location": "{\"function\":6}",
-	"Play Sound Group": "{\"function\":6}",
-	"Play Sound Group With Gain": "{\"function\":6}",
-	"Play Sound Group At Location": "{\"function\":6}",
-	"Play Sound Group With Gain At Location": "{\"function\":6}",
-	"Play Sound Group At Location With Priority": "{\"function\":6}",
+	"User Interface Image": "{\"function\":36,\"image_path\":\"Textures/ui/menus/credits/overgrowth.png\",\"position\":[955,215],\"size\":[720,240],\"ui_function\":1}",
+	"User Interface Text": "{\"function\":36,\"position\":[1025,225],\"rotation\":0,\"text_content\":\"Example Text\",\"ui_element_identifier\":\"3163\",\"ui_function\":2,\"use_fade_in\":false,\"use_move_in\":false}",
+	"User Interface Clear": "{\"function\":36,\"ui_function\":0}",
+	"User Interface Font": "{\"function\":36,\"ui_function\":3}",
+	"Play Sound": "{\"function\":6,\"play_sound_method\":0}",
+	"Play Sound At Location": "{\"function\":6,\"play_sound_method\":1}",
+	"Play Sound Loop": "{\"function\":6,\"play_sound_method\":2}",
+    "Play Sound Loop At Location": "{\"function\":6,\"play_sound_method\":3}",
+	"Play Sound Group": "{\"function\":6,\"play_sound_method\":4}",
+	"Play Sound Group With Gain": "{\"function\":6,\"play_sound_method\":5}",
+	"Play Sound Group At Location": "{\"function\":6,\"play_sound_method\":6}",
+	"Play Sound Group With Gain At Location": "{\"function\":6,\"play_sound_method\":7}",
+	"Play Sound Group At Location With Priority": "{\"function\":6,\"play_sound_method\":8}",
 	"Play Music": "{\"function\":18}",
-	"Dialogue": "{\"function\":33}",
-	"Dialogue Start": "{\"function\":33}",
-	"Dialogue End": "{\"function\":33}",
-	"Dialogue Say": "{\"function\":33}",
-	"Dialogue Actor Settings": "{\"function\":33}",
-	"Dialogue Actor Position": "{\"function\":33}",
-	"Dialogue Actor Eye Direction": "{\"function\":33}",
-	"Dialogue Actor Torso Direction": "{\"function\":33}"
+	"Dialogue Start": "{\"function\":33,\"dialogue_function\":11,\"use_fade\":true}",
+	"Dialogue End": "{\"dialogue_function\":12,\"function\":33,\"use_fade\":true}",
+	"Dialogue Say": "{\"function\":33,\"dialogue_function\":0}",
+	"Dialogue Set Actor Dialogue Control": "{\"function\":33,\"dialogue_function\":13}",
+	"Dialogue Choice": "{\"function\":33,\"dialogue_function\":14}",
+	"Dialogue Actor Settings": "{\"function\":33,\"dialogue_function\":1}",
+	"Dialogue Actor Position": "{\"function\":33,\"dialogue_function\":2}",
+	"Dialogue Actor Eye Direction": "{\"function\":33,\"dialogue_function\":4}",
+	"Dialogue Actor Torso Direction": "{\"function\":33,\"dialogue_function\":5}",
+	"Dialogue Actor Head Direction": "{\"function\":33,\"dialogue_function\":6}",
+	"Dialogue Actor Omnicient": "{\"function\":33,\"dialogue_function\":7}",
+	"Dialogue Set Camera Position": "{\"function\":33,\"dialogue_function\":8}",
+	"Dialogue Fade To Black": "{\"function\":33,\"dialogue_function\":9}",
+	"Dialogue Settings": "{\"function\":33,\"dialogue_function\":10}"
 }
