Quick launch sound entries using groups now have a default xml.

--- a/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
+++ b/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
@@ -7,11 +7,11 @@
 	"Play Sound At Location": "{\"function\":6,\"play_sound_method\":1}",
 	"Play Sound Loop": "{\"function\":6,\"play_sound_method\":2}",
     "Play Sound Loop At Location": "{\"function\":6,\"play_sound_method\":3}",
-	"Play Sound Group": "{\"function\":6,\"play_sound_method\":4}",
-	"Play Sound Group With Gain": "{\"function\":6,\"play_sound_method\":5}",
-	"Play Sound Group At Location": "{\"function\":6,\"play_sound_method\":6}",
-	"Play Sound Group With Gain At Location": "{\"function\":6,\"play_sound_method\":7}",
-	"Play Sound Group At Location With Priority": "{\"function\":6,\"play_sound_method\":8}",
+	"Play Sound Group": "{\"function\":6,\"play_sound_method\":4,\"sound_path\":\"Data/Sounds/footstep_mud.xml\"}",
+	"Play Sound Group With Gain": "{\"function\":6,\"play_sound_method\":5,\"sound_path\":\"Data/Sounds/footstep_mud.xml\"}",
+	"Play Sound Group At Location": "{\"function\":6,\"play_sound_method\":6,\"sound_path\":\"Data/Sounds/footstep_mud.xml\"}",
+	"Play Sound Group With Gain At Location": "{\"function\":6,\"play_sound_method\":7,\"sound_path\":\"Data/Sounds/footstep_mud.xml\"}",
+	"Play Sound Group At Location With Priority": "{\"function\":6,\"play_sound_method\":8,\"sound_path\":\"Data/Sounds/footstep_mud.xml\"}",
 	"Play Music": "{\"function\":18}",
 	"Dialogue Start": "{\"function\":33,\"dialogue_function\":11,\"use_fade\":true}",
 	"Dialogue End": "{\"dialogue_function\":12,\"function\":33,\"use_fade\":true}",
