More entries added to the quick launch menu.

--- a/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
+++ b/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
@@ -1,8 +1,4 @@
 {
-	"User Interface Image": "{\"function\":36,\"image_path\":\"Textures/ui/menus/credits/overgrowth.png\",\"position\":[955,215],\"size\":[720,240],\"ui_function\":1}",
-	"User Interface Text": "{\"function\":36,\"position\":[1025,225],\"rotation\":0,\"text_content\":\"Example Text\",\"ui_element_identifier\":\"3163\",\"ui_function\":2,\"use_fade_in\":false,\"use_move_in\":false}",
-	"User Interface Clear": "{\"function\":36,\"ui_function\":0}",
-	"User Interface Font": "{\"function\":36,\"ui_function\":3}",
 	"Play Sound": "{\"function\":6,\"play_sound_method\":0}",
 	"Play Sound At Location": "{\"function\":6,\"play_sound_method\":1}",
 	"Play Sound Loop": "{\"function\":6,\"play_sound_method\":2}",
@@ -12,7 +8,59 @@
 	"Play Sound Group At Location": "{\"function\":6,\"play_sound_method\":6,\"sound_path\":\"Data/Sounds/footstep_mud.xml\"}",
 	"Play Sound Group With Gain At Location": "{\"function\":6,\"play_sound_method\":7,\"sound_path\":\"Data/Sounds/footstep_mud.xml\"}",
 	"Play Sound Group At Location With Priority": "{\"function\":6,\"play_sound_method\":8,\"sound_path\":\"Data/Sounds/footstep_mud.xml\"}",
-	"Play Music": "{\"function\":18}",
+	"Wait For Level Message": "{\"function\":1}",
+	"Wait": "{\"function\":2}",
+	"Set Enabled": "{\"function\":3}",
+	"Set Character": "{\"function\":4}",
+	"Create Particle": "{\"function\":5}",
+	"Go To Line": "{\"function\":7}",
+	"On Character Enter": "{\"function\":8,\"hotspot_trigger_type\":0}",
+	"On Character Exit": "{\"function\":8,\"hotspot_trigger_type\":1}",
+	"While Character Inside": "{\"function\":8,\"hotspot_trigger_type\":3}",
+	"While Character Outside": "{\"function\":8,\"hotspot_trigger_type\":4}",
+	"Send Level Message": "{\"function\":10}",
+	"Start Dialogue": "{\"function\":11}",
+	"Set Object Parameter": "{\"function\":12}",
+	"Set Level Parameter": "{\"function\":13}",
+	"Set Camera Parameter": "{\"function\":14}",
+	"Create Object": "{\"function\":15}",
+	"Transform Object": "{\"function\":16}",
+	"Set Color Tint": "{\"function\":17,\"color_type\":0}",
+	"Set Color Palette": "{\"function\":17,\"color_type\":1}",
+	"Play Music": "{\"function\":18,\"on_event\":false}",
+	"Play Music In Combat": "{\"function\":18,\"on_event\":true,\"music_event\":0}",
+	"Play Music Player Died": "{\"function\":18,\"on_event\":true,\"music_event\":1}",
+	"Play Music Enemies Defeated": "{\"function\":18,\"on_event\":true,\"music_event\":2}",
+	"Character Control": "{\"function\":19}",
+	"Display Text": "{\"function\":20}",
+	"Display Image": "{\"function\":21}",
+	"Load Level": "{\"function\":22}",
+	"Check Character State Awake": "{\"function\":23,\"state_check\":0}",
+	"Check Character State Unconscious": "{\"function\":23,\"state_check\":1}",
+	"Check Character State Dead": "{\"function\":23,\"state_check\":2}",
+	"Check Character State Knows About": "{\"function\":23,\"state_check\":3}",
+	"Check Character State In Combat": "{\"function\":23,\"state_check\":4}",
+	"Check Character State Moving": "{\"function\":23,\"state_check\":5}",
+	"Check Character State Attacking": "{\"function\":23,\"state_check\":6}",
+	"Check Character State Ragdolling": "{\"function\":23,\"state_check\":7}",
+	"Check Character State Blocked Attack": "{\"function\":23,\"state_check\":8}",
+	"Check Character State AI Patrolling": "{\"function\":23,\"state_check\":9}",
+	"Check Character State AI Investigating": "{\"function\":23,\"state_check\":10}",
+	"Check Character State AI Getting Help": "{\"function\":23,\"state_check\":11}",
+	"Check Character State AI Fleeing": "{\"function\":23,\"state_check\":12}",
+	"Check Character State In Proximity": "{\"function\":23,\"state_check\":13}",
+	"Check Character State Right Footstep": "{\"function\":23,\"state_check\":14}",
+	"Check Character State Left Footstep": "{\"function\":23,\"state_check\":15}",
+	"Set Velocity": "{\"function\":24}",
+	"Slow Motion": "{\"function\":25}",
+	"On Input": "{\"function\":26}",
+	"Set Morph Target": "{\"function\":27}",
+	"Set Bone Inflate": "{\"function\":28}",
+	"Send Character Message": "{\"function\":29}",
+	"Animation": "{\"function\":30}",
+	"Billboard": "{\"function\":31}",
+	"Read Savefile": "{\"function\":32,\"read_write_mode\":0}",
+	"Write Savefile": "{\"function\":32,\"read_write_mode\":1}",
 	"Dialogue Start": "{\"function\":33,\"dialogue_function\":11,\"use_fade\":true}",
 	"Dialogue End": "{\"dialogue_function\":12,\"function\":33,\"use_fade\":true}",
 	"Dialogue Say": "{\"function\":33,\"dialogue_function\":0}",
@@ -26,5 +74,13 @@
 	"Dialogue Actor Omnicient": "{\"function\":33,\"dialogue_function\":7}",
 	"Dialogue Set Camera Position": "{\"function\":33,\"dialogue_function\":8}",
 	"Dialogue Fade To Black": "{\"function\":33,\"dialogue_function\":9}",
-	"Dialogue Settings": "{\"function\":33,\"dialogue_function\":10}"
+	"Dialogue Settings": "{\"function\":33,\"dialogue_function\":10}",
+	"Comment": "{\"function\":34}",
+	"AI Control": "{\"function\":35}",
+	"User Interface Image": "{\"function\":36,\"image_path\":\"Textures/ui/menus/credits/overgrowth.png\",\"position\":[955,215],\"size\":[720,240],\"ui_function\":1}",
+	"User Interface Text": "{\"function\":36,\"position\":[1025,225],\"rotation\":0,\"text_content\":\"Example Text\",\"ui_element_identifier\":\"3163\",\"ui_function\":2,\"use_fade_in\":false,\"use_move_in\":false}",
+	"User Interface Clear": "{\"function\":36,\"ui_function\":0}",
+	"User Interface Font": "{\"function\":36,\"ui_function\":3}",
+	"Checkpoint Save": "{\"function\":37,\"checkpoint_mode\":0}",
+	"Checkpoint Load": "{\"function\":37,\"checkpoint_mode\":1}"
 }
