Made the selected object be a target when adding new functions.

--- a/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
+++ b/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
@@ -70,6 +70,7 @@
 	"Dialogue Actor Position": "{\"function\":33,\"dialogue_function\":2}",
 	"Dialogue Actor Eye Direction": "{\"function\":33,\"dialogue_function\":4}",
 	"Dialogue Actor Torso Direction": "{\"function\":33,\"dialogue_function\":5}",
+	"Dialogue Actor Animation": "{\"function\":33,\"dialogue_function\":3}",
 	"Dialogue Actor Head Direction": "{\"function\":33,\"dialogue_function\":6}",
 	"Dialogue Actor Omnicient": "{\"function\":33,\"dialogue_function\":7}",
 	"Dialogue Set Camera Position": "{\"function\":33,\"dialogue_function\":8}",
