Added more entries to the quick launch database.

--- a/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
+++ b/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
@@ -31,6 +31,7 @@
 	"Play Music In Combat": "{\"function\":18,\"on_event\":true,\"music_event\":0}",
 	"Play Music Player Died": "{\"function\":18,\"on_event\":true,\"music_event\":1}",
 	"Play Music Enemies Defeated": "{\"function\":18,\"on_event\":true,\"music_event\":2}",
+	"Play Music Ambient": "{\"function\":18,\"on_event\":true,\"music_event\":3}",
 	"Character Control": "{\"function\":19}",
 	"Display Text": "{\"function\":20}",
 	"Display Image": "{\"function\":21}",
@@ -78,8 +79,28 @@
 	"Dialogue Settings": "{\"function\":33,\"dialogue_function\":10}",
 	"Comment": "{\"function\":34}",
 	"AI Control": "{\"function\":35}",
+	"AI Control Patrol": "{\"function\":35,\"ai_goal\":0}",
+	"AI Control Attack Target": "{\"function\":35,\"ai_goal\":1}",
+	"AI Control Investigate Slow": "{\"function\":35,\"ai_goal\":2}",
+	"AI Control Investigate Urgent": "{\"function\":35,\"ai_goal\":3}",
+	"AI Control Investigate Around": "{\"function\":35,\"ai_goal\":4}",
+	"AI Control Get Help": "{\"function\":35,\"ai_goal\":5}",
+	"AI Control Escort": "{\"function\":35,\"ai_goal\":6}",
+	"AI Control Get Weapon": "{\"function\":35,\"ai_goal\":7}",
+	"AI Control Get Closest Weapon": "{\"function\":35,\"ai_goal\":8}",
+	"AI Control Throw Weapon": "{\"function\":35,\"ai_goal\":9}",
+	"AI Control Choke": "{\"function\":35,\"ai_goal\":10}",
+	"AI Control Cut Throat": "{\"function\":35,\"ai_goal\":11}",
+	"AI Control Jump To Target": "{\"function\":35,\"ai_goal\":12}",
+	"AI Control Jump": "{\"function\":35,\"ai_goal\":13}",
+	"AI Control Attack": "{\"function\":35,\"ai_goal\":14}",
+	"AI Control Roll": "{\"function\":35,\"ai_goal\":15}",
+	"AI Control Dodge": "{\"function\":35,\"ai_goal\":16}",
+	"AI Control Throw Enemy": "{\"function\":35,\"ai_goal\":17}",
+	"AI Control Investigate Slow At Target": "{\"function\":35,\"ai_goal\":18}",
+	"AI Control Investigate Urgent At Target": "{\"function\":35,\"ai_goal\":19}",
 	"User Interface Image": "{\"function\":36,\"image_path\":\"Textures/ui/menus/credits/overgrowth.png\",\"position\":[955,215],\"size\":[720,240],\"ui_function\":1}",
-	"User Interface Text": "{\"function\":36,\"position\":[1025,225],\"rotation\":0,\"text_content\":\"Example Text\",\"ui_element_identifier\":\"3163\",\"ui_function\":2,\"use_fade_in\":false,\"use_move_in\":false}",
+	"User Interface Text": "{\"function\":36,\"position\":[1025,225],\"rotation\":0,\"text_content\":\"Example Text\",\"ui_function\":2,\"use_fade_in\":false,\"use_move_in\":false}",
 	"User Interface Clear": "{\"function\":36,\"ui_function\":0}",
 	"User Interface Font": "{\"function\":36,\"ui_function\":3}",
 	"Checkpoint Save": "{\"function\":37,\"checkpoint_mode\":0}",
