Added more functions to quick launch database.

--- a/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
+++ b/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
@@ -21,7 +21,24 @@
 	"Send Level Message": "{\"function\":10}",
 	"Start Dialogue": "{\"function\":11}",
 	"Set Object Parameter": "{\"function\":12}",
-	"Set Level Parameter": "{\"function\":13}",
+	"Set Level Parameter Achievements": "{\"function\":13,\"level_param\":0}",
+	"Set Level Parameter Custom Shaders": "{\"function\":13,\"level_param\":1}",
+	"Set Level Parameter Fog Amount": "{\"function\":13,\"level_param\":2}",
+	"Set Level Parameter GPU Particle Field": "{\"function\":13,\"level_param\":3}",
+	"Set Level Parameter HDR Black Point": "{\"function\":13,\"level_param\":4}",
+	"Set Level Parameter HDR Bloom Multiplier": "{\"function\":13,\"level_param\":5}",
+	"Set Level Parameter HDR White Point": "{\"function\":13,\"level_param\":6}",
+	"Set Level Parameter Level Boundaries": "{\"function\":13,\"level_param\":7}",
+	"Set Level Parameter Load Tip": "{\"function\":13,\"level_param\":8}",
+	"Set Level Parameter Objectives": "{\"function\":13,\"level_param\":9}",
+	"Set Level Parameter Saturation": "{\"function\":13,\"level_param\":10}",
+	"Set Level Parameter Sky Brightness": "{\"function\":13,\"level_param\":11}",
+	"Set Level Parameter Sky Rotation": "{\"function\":13,\"level_param\":12}",
+	"Set Level Parameter Sky Tint": "{\"function\":13,\"level_param\":13}",
+	"Set Level Parameter Sun Position": "{\"function\":13,\"level_param\":14}",
+	"Set Level Parameter Sun Color": "{\"function\":13,\"level_param\":15}",
+	"Set Level Parameter Sun Intensity": "{\"function\":13,\"level_param\":16}",
+	"Set Level Parameter Other": "{\"function\":13,\"level_param\":17}",
 	"Set Camera Parameter": "{\"function\":14}",
 	"Create Object": "{\"function\":15}",
 	"Transform Object": "{\"function\":16}",
