Added billboard shortcuts to quick launch menu.

--- a/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
+++ b/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
@@ -76,7 +76,11 @@
 	"Set Bone Inflate": "{\"function\":28}",
 	"Send Character Message": "{\"function\":29}",
 	"Animation": "{\"function\":30}",
-	"Billboard": "{\"function\":31}",
+	"Billboard Image At Placeholder": "{\"function\":31,\"billboard_type\":0}",
+	"Billboard Text At Placeholder": "{\"function\":31,\"billboard_type\":1}",
+	"Billboard Image At Target": "{\"function\":31,\"billboard_type\":2}",
+	"Billboard Text At Target": "{\"function\":31,\"billboard_type\":3}",
+	"Billboard Delete": "{\"function\":31,\"billboard_type\":4}",
 	"Read Savefile": "{\"function\":32,\"read_write_mode\":0}",
 	"Write Savefile": "{\"function\":32,\"read_write_mode\":1}",
 	"Dialogue Start": "{\"function\":33,\"dialogue_function\":11,\"use_fade\":true}",
