Added more functions to quick launch database.

--- a/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
+++ b/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
@@ -1,4 +1,80 @@
 {
+	"AI Control Patrol": "{\"function\":35,\"ai_goal\":0}",
+	"AI Control Attack Target": "{\"function\":35,\"ai_goal\":1}",
+	"AI Control Investigate Slow": "{\"function\":35,\"ai_goal\":2}",
+	"AI Control Investigate Urgent": "{\"function\":35,\"ai_goal\":3}",
+	"AI Control Investigate Around": "{\"function\":35,\"ai_goal\":4}",
+	"AI Control Get Help": "{\"function\":35,\"ai_goal\":5}",
+	"AI Control Escort": "{\"function\":35,\"ai_goal\":6}",
+	"AI Control Get Weapon": "{\"function\":35,\"ai_goal\":7}",
+	"AI Control Get Closest Weapon": "{\"function\":35,\"ai_goal\":8}",
+	"AI Control Throw Weapon": "{\"function\":35,\"ai_goal\":9}",
+	"AI Control Choke": "{\"function\":35,\"ai_goal\":10}",
+	"AI Control Cut Throat": "{\"function\":35,\"ai_goal\":11}",
+	"AI Control Jump To Target": "{\"function\":35,\"ai_goal\":12}",
+	"AI Control Jump": "{\"function\":35,\"ai_goal\":13}",
+	"AI Control Attack": "{\"function\":35,\"ai_goal\":14}",
+	"AI Control Roll": "{\"function\":35,\"ai_goal\":15}",
+	"AI Control Dodge": "{\"function\":35,\"ai_goal\":16}",
+	"AI Control Throw Enemy": "{\"function\":35,\"ai_goal\":17}",
+	"AI Control Investigate Slow At Target": "{\"function\":35,\"ai_goal\":18}",
+	"AI Control Investigate Urgent At Target": "{\"function\":35,\"ai_goal\":19}",
+	"Animation": "{\"function\":30}",
+	"Animation Camera": "{\"function\":30,\"animate_camera\":true}",
+	"Billboard Image At Placeholder": "{\"function\":31,\"billboard_type\":0}",
+	"Billboard Text At Placeholder": "{\"function\":31,\"billboard_type\":1}",
+	"Billboard Image At Target": "{\"function\":31,\"billboard_type\":2}",
+	"Billboard Text At Target": "{\"function\":31,\"billboard_type\":3}",
+	"Billboard Delete": "{\"function\":31,\"billboard_type\":4}",
+	"Character Control Aggression": "{\"function\":19,\"character_option\":0}",
+	"Character Control Attack Damage": "{\"function\":19,\"character_option\":1}",
+	"Character Control Attack Knockback": "{\"function\":19,\"character_option\":2}",
+	"Character Control Attack Speed": "{\"function\":19,\"character_option\":3}",
+	"Character Control Block Follow-up": "{\"function\":19,\"character_option\":4}",
+	"Character Control Block Skill": "{\"function\":19,\"character_option\":5}",
+	"Character Control Cannot Be Disarmed": "{\"function\":19,\"character_option\":6}",
+	"Character Control Character Scale": "{\"function\":19,\"character_option\":7}",
+	"Character Control Damage Resistance": "{\"function\":19,\"character_option\":8}",
+	"Character Control Ear Size": "{\"function\":19,\"character_option\":9}",
+	"Character Control Fat": "{\"function\":19,\"character_option\":10}",
+	"Character Control FatFocus FOV distance": "{\"function\":19,\"character_option\":11}",
+	"Character Control Focus FOV horizontal": "{\"function\":19,\"character_option\":12}",
+	"Character Control Focus FOV vertical": "{\"function\":19,\"character_option\":13}",
+	"Character Control Ground Aggression": "{\"function\":19,\"character_option\":14}",
+	"Character Control Knockout Shield": "{\"function\":19,\"character_option\":150}",
+	"Character Control Left handed": "{\"function\":19,\"character_option\":16}",
+	"Character Control Movement Speed": "{\"function\":19,\"character_option\":17}",
+	"Character Control Muscle": "{\"function\":19,\"character_option\":18}",
+	"Character Control Peripheral FOV distance": "{\"function\":19,\"character_option\":19}",
+	"Character Control Peripheral FOV horizontal": "{\"function\":19,\"character_option\":20}",
+	"Character Control Peripheral FOV vertical": "{\"function\":19,\"character_option\":21}",
+	"Character Control Species": "{\"function\":19,\"character_option\":22}",
+	"Character Control Static": "{\"function\":19,\"character_option\":23}",
+	"Character Control Teams": "{\"function\":19,\"character_option\":24}",
+	"Character Control Fall Damage Multiplier": "{\"function\":19,\"character_option\":25}",
+	"Character Control Fear - Afraid At Health Level": "{\"function\":19,\"character_option\":26}",
+	"Character Control Fear - Always Afraid On Sight": "{\"function\":19,\"character_option\":27}",
+	"Character Control Fear - Causes Fear On Sight": "{\"function\":19,\"character_option\":28}",
+	"Character Control Fear - Never Afraid On Sight": "{\"function\":19,\"character_option\":29}",
+	"Character Control No Look Around": "{\"function\":19,\"character_option\":30}",
+	"Character Control Stick To Nav Mesh": "{\"function\":19,\"character_option\":31}",
+	"Character Control Throw Counter Probability": "{\"function\":19,\"character_option\":32}",
+	"Character Control Throw Trainer": "{\"function\":19,\"character_option\":33}",
+	"Character Control Weapon Catch Skill": "{\"function\":19,\"character_option\":34}",
+	"Character Control Wearing Metal Armor": "{\"function\":19,\"character_option\":35}",
+	"Character Control Ignite": "{\"function\":19,\"character_option\":36}",
+	"Character Control Extinguish": "{\"function\":19,\"character_option\":37}",
+	"Character Control Is Player": "{\"function\":19,\"character_option\":38}",
+	"Character Control Kill": "{\"function\":19,\"character_option\":39}",
+	"Character Control Revive": "{\"function\":19,\"character_option\":40}",
+	"Character Control Limp Ragdoll": "{\"function\":19,\"character_option\":41}",
+	"Character Control Injured Ragdoll": "{\"function\":19,\"character_option\":42}",
+	"Character Control Ragdoll": "{\"function\":19,\"character_option\":43}",
+	"Character Control Cut Throat": "{\"function\":19,\"character_option\":44}",
+	"Character Control Apply Damage": "{\"function\":19,\"character_option\":45}",
+	"Character Control Wet": "{\"function\":19,\"character_option\":46}",
+	"Character Control Attach Item": "{\"function\":19,\"character_option\":47}",
+	"Character Control Sheathe Item": "{\"function\":19,\"character_option\":48}",
 	"Play Sound": "{\"function\":6,\"play_sound_method\":0}",
 	"Play Sound At Location": "{\"function\":6,\"play_sound_method\":1}",
 	"Play Sound Loop": "{\"function\":6,\"play_sound_method\":2}",
@@ -49,7 +125,6 @@
 	"Play Music Player Died": "{\"function\":18,\"on_event\":true,\"music_event\":1}",
 	"Play Music Enemies Defeated": "{\"function\":18,\"on_event\":true,\"music_event\":2}",
 	"Play Music Ambient": "{\"function\":18,\"on_event\":true,\"music_event\":3}",
-	"Character Control": "{\"function\":19}",
 	"Display Text": "{\"function\":20}",
 	"Display Image": "{\"function\":21}",
 	"Load Level": "{\"function\":22}",
@@ -75,12 +150,6 @@
 	"Set Morph Target": "{\"function\":27}",
 	"Set Bone Inflate": "{\"function\":28}",
 	"Send Character Message": "{\"function\":29}",
-	"Animation": "{\"function\":30}",
-	"Billboard Image At Placeholder": "{\"function\":31,\"billboard_type\":0}",
-	"Billboard Text At Placeholder": "{\"function\":31,\"billboard_type\":1}",
-	"Billboard Image At Target": "{\"function\":31,\"billboard_type\":2}",
-	"Billboard Text At Target": "{\"function\":31,\"billboard_type\":3}",
-	"Billboard Delete": "{\"function\":31,\"billboard_type\":4}",
 	"Read Savefile": "{\"function\":32,\"read_write_mode\":0}",
 	"Write Savefile": "{\"function\":32,\"read_write_mode\":1}",
 	"Dialogue Start": "{\"function\":33,\"dialogue_function\":11,\"use_fade\":true}",
@@ -99,27 +168,6 @@
 	"Dialogue Fade To Black": "{\"function\":33,\"dialogue_function\":9}",
 	"Dialogue Settings": "{\"function\":33,\"dialogue_function\":10}",
 	"Comment": "{\"function\":34}",
-	"AI Control": "{\"function\":35}",
-	"AI Control Patrol": "{\"function\":35,\"ai_goal\":0}",
-	"AI Control Attack Target": "{\"function\":35,\"ai_goal\":1}",
-	"AI Control Investigate Slow": "{\"function\":35,\"ai_goal\":2}",
-	"AI Control Investigate Urgent": "{\"function\":35,\"ai_goal\":3}",
-	"AI Control Investigate Around": "{\"function\":35,\"ai_goal\":4}",
-	"AI Control Get Help": "{\"function\":35,\"ai_goal\":5}",
-	"AI Control Escort": "{\"function\":35,\"ai_goal\":6}",
-	"AI Control Get Weapon": "{\"function\":35,\"ai_goal\":7}",
-	"AI Control Get Closest Weapon": "{\"function\":35,\"ai_goal\":8}",
-	"AI Control Throw Weapon": "{\"function\":35,\"ai_goal\":9}",
-	"AI Control Choke": "{\"function\":35,\"ai_goal\":10}",
-	"AI Control Cut Throat": "{\"function\":35,\"ai_goal\":11}",
-	"AI Control Jump To Target": "{\"function\":35,\"ai_goal\":12}",
-	"AI Control Jump": "{\"function\":35,\"ai_goal\":13}",
-	"AI Control Attack": "{\"function\":35,\"ai_goal\":14}",
-	"AI Control Roll": "{\"function\":35,\"ai_goal\":15}",
-	"AI Control Dodge": "{\"function\":35,\"ai_goal\":16}",
-	"AI Control Throw Enemy": "{\"function\":35,\"ai_goal\":17}",
-	"AI Control Investigate Slow At Target": "{\"function\":35,\"ai_goal\":18}",
-	"AI Control Investigate Urgent At Target": "{\"function\":35,\"ai_goal\":19}",
 	"User Interface Image": "{\"function\":36,\"image_path\":\"Textures/ui/menus/credits/overgrowth.png\",\"position\":[955,215],\"size\":[720,240],\"ui_function\":1}",
 	"User Interface Text": "{\"function\":36,\"position\":[1025,225],\"rotation\":0,\"text_content\":\"Example Text\",\"ui_function\":2,\"use_fade_in\":false,\"use_move_in\":false}",
 	"User Interface Clear": "{\"function\":36,\"ui_function\":0}",
