Added all the CheckCharacterState functions to quick launch database.

--- a/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
+++ b/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
@@ -75,6 +75,34 @@
 	"Character Control Wet": "{\"function\":19,\"character_option\":46}",
 	"Character Control Attach Item": "{\"function\":19,\"character_option\":47}",
 	"Character Control Sheathe Item": "{\"function\":19,\"character_option\":48}",
+	"Check Character State Awake": "{\"function\":23,\"state_check\":0}",
+	"Check Character State Unconscious": "{\"function\":23,\"state_check\":1}",
+	"Check Character State Dead": "{\"function\":23,\"state_check\":2}",
+	"Check Character State Knows About": "{\"function\":23,\"state_check\":3}",
+	"Check Character State In Combat": "{\"function\":23,\"state_check\":4}",
+	"Check Character State Moving": "{\"function\":23,\"state_check\":5}",
+	"Check Character State Attacking": "{\"function\":23,\"state_check\":6}",
+	"Check Character State Ragdolling": "{\"function\":23,\"state_check\":7}",
+	"Check Character State Blocked Attack": "{\"function\":23,\"state_check\":8}",
+	"Check Character State AI Patrolling": "{\"function\":23,\"state_check\":9}",
+	"Check Character State AI Investigating": "{\"function\":23,\"state_check\":10}",
+	"Check Character State AI Getting Help": "{\"function\":23,\"state_check\":11}",
+	"Check Character State AI Fleeing": "{\"function\":23,\"state_check\":12}",
+	"Check Character State In Proximity": "{\"function\":23,\"state_check\":13}",
+	"Check Character State Right Footstep": "{\"function\":23,\"state_check\":14}",
+	"Check Character State Left Footstep": "{\"function\":23,\"state_check\":15}",
+	"Check Character State Takes Damage": "{\"function\":23,\"state_check\":16}",
+	"Check Character State Blood Damage": "{\"function\":23,\"state_check\":17}",
+	"Check Character State Blood Health": "{\"function\":23,\"state_check\":18}",
+	"Check Character State Block Health": "{\"function\":23,\"state_check\":19}",
+	"Check Character State Temp Health": "{\"function\":23,\"state_check\":20}",
+	"Check Character State Permanent Health": "{\"function\":23,\"state_check\":21}",
+	"Check Character State Current Animation": "{\"function\":23,\"state_check\":22}",
+	"Check Character State Ray Collides With": "{\"function\":23,\"state_check\":23}",
+	"Check Character State On Ground": "{\"function\":23,\"state_check\":24}",
+	"Check Character State Is Player": "{\"function\":23,\"state_check\":25}",
+	"Check Character State Item Held": "{\"function\":23,\"state_check\":26}",
+	"Check Character State Pass All States To Variables": "{\"function\":23,\"ccs_mode\":1}",
 	"Play Sound": "{\"function\":6,\"play_sound_method\":0}",
 	"Play Sound At Location": "{\"function\":6,\"play_sound_method\":1}",
 	"Play Sound Loop": "{\"function\":6,\"play_sound_method\":2}",
@@ -128,22 +156,6 @@
 	"Display Text": "{\"function\":20}",
 	"Display Image": "{\"function\":21}",
 	"Load Level": "{\"function\":22}",
-	"Check Character State Awake": "{\"function\":23,\"state_check\":0}",
-	"Check Character State Unconscious": "{\"function\":23,\"state_check\":1}",
-	"Check Character State Dead": "{\"function\":23,\"state_check\":2}",
-	"Check Character State Knows About": "{\"function\":23,\"state_check\":3}",
-	"Check Character State In Combat": "{\"function\":23,\"state_check\":4}",
-	"Check Character State Moving": "{\"function\":23,\"state_check\":5}",
-	"Check Character State Attacking": "{\"function\":23,\"state_check\":6}",
-	"Check Character State Ragdolling": "{\"function\":23,\"state_check\":7}",
-	"Check Character State Blocked Attack": "{\"function\":23,\"state_check\":8}",
-	"Check Character State AI Patrolling": "{\"function\":23,\"state_check\":9}",
-	"Check Character State AI Investigating": "{\"function\":23,\"state_check\":10}",
-	"Check Character State AI Getting Help": "{\"function\":23,\"state_check\":11}",
-	"Check Character State AI Fleeing": "{\"function\":23,\"state_check\":12}",
-	"Check Character State In Proximity": "{\"function\":23,\"state_check\":13}",
-	"Check Character State Right Footstep": "{\"function\":23,\"state_check\":14}",
-	"Check Character State Left Footstep": "{\"function\":23,\"state_check\":15}",
 	"Set Velocity": "{\"function\":24}",
 	"Slow Motion": "{\"function\":25}",
 	"On Input": "{\"function\":26}",
