Worked on quick launch database.

--- a/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
+++ b/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
@@ -103,6 +103,29 @@
 	"Check Character State Is Player": "{\"function\":23,\"state_check\":25}",
 	"Check Character State Item Held": "{\"function\":23,\"state_check\":26}",
 	"Check Character State Pass All States To Variables": "{\"function\":23,\"ccs_mode\":1}",
+	"Checkpoint Save": "{\"function\":37,\"checkpoint_mode\":0}",
+	"Checkpoint Load": "{\"function\":37,\"checkpoint_mode\":1}",
+	"Comment": "{\"function\":34}",
+	"Create At Placeholder": "{\"function\":15,\"create_delete_mode\":0}",
+	"Delete Object": "{\"function\":15,\"create_delete_mode\":1}",
+	"Create At Hotspot": "{\"function\":15,\"create_delete_mode\":2}",
+	"Create Particle": "{\"function\":5}",
+	"Dialogue Say": "{\"function\":33,\"dialogue_function\":0}",
+	"Dialogue Actor Settings": "{\"function\":33,\"dialogue_function\":1}",
+	"Dialogue Actor Position": "{\"function\":33,\"dialogue_function\":2}",
+	"Dialogue Actor Animation": "{\"function\":33,\"dialogue_function\":3}",
+	"Dialogue Actor Eye Direction": "{\"function\":33,\"dialogue_function\":4}",
+	"Dialogue Actor Torso Direction": "{\"function\":33,\"dialogue_function\":5}",
+	"Dialogue Actor Head Direction": "{\"function\":33,\"dialogue_function\":6}",
+	"Dialogue Actor Omnicient": "{\"function\":33,\"dialogue_function\":7}",
+	"Dialogue Set Camera Position": "{\"function\":33,\"dialogue_function\":8}",
+	"Dialogue Fade To Black": "{\"function\":33,\"dialogue_function\":9}",
+	"Dialogue Settings": "{\"function\":33,\"dialogue_function\":10}",
+	"Dialogue Start": "{\"function\":33,\"dialogue_function\":11,\"use_fade\":true}",
+	"Dialogue End": "{\"function\":33,\"dialogue_function\":12,\"use_fade\":true}",
+	"Dialogue Set Actor Dialogue Control": "{\"function\":33,\"dialogue_function\":13}",
+	"Dialogue Choice": "{\"function\":33,\"dialogue_function\":14}",
+	"Dialogue Clear": "{\"function\":33,\"dialogue_function\":15}",
 	"Play Sound": "{\"function\":6,\"play_sound_method\":0}",
 	"Play Sound At Location": "{\"function\":6,\"play_sound_method\":1}",
 	"Play Sound Loop": "{\"function\":6,\"play_sound_method\":2}",
@@ -116,7 +139,6 @@
 	"Wait": "{\"function\":2}",
 	"Set Enabled": "{\"function\":3}",
 	"Set Character": "{\"function\":4}",
-	"Create Particle": "{\"function\":5}",
 	"Go To Line": "{\"function\":7}",
 	"On Character Enter": "{\"function\":8,\"hotspot_trigger_type\":0}",
 	"On Character Exit": "{\"function\":8,\"hotspot_trigger_type\":1}",
@@ -144,7 +166,6 @@
 	"Set Level Parameter Sun Intensity": "{\"function\":13,\"level_param\":16}",
 	"Set Level Parameter Other": "{\"function\":13,\"level_param\":17}",
 	"Set Camera Parameter": "{\"function\":14}",
-	"Create Object": "{\"function\":15}",
 	"Transform Object": "{\"function\":16}",
 	"Set Color Tint": "{\"function\":17,\"color_type\":0}",
 	"Set Color Palette": "{\"function\":17,\"color_type\":1}",
@@ -164,26 +185,8 @@
 	"Send Character Message": "{\"function\":29}",
 	"Read Savefile": "{\"function\":32,\"read_write_mode\":0}",
 	"Write Savefile": "{\"function\":32,\"read_write_mode\":1}",
-	"Dialogue Start": "{\"function\":33,\"dialogue_function\":11,\"use_fade\":true}",
-	"Dialogue End": "{\"dialogue_function\":12,\"function\":33,\"use_fade\":true}",
-	"Dialogue Say": "{\"function\":33,\"dialogue_function\":0}",
-	"Dialogue Set Actor Dialogue Control": "{\"function\":33,\"dialogue_function\":13}",
-	"Dialogue Choice": "{\"function\":33,\"dialogue_function\":14}",
-	"Dialogue Actor Settings": "{\"function\":33,\"dialogue_function\":1}",
-	"Dialogue Actor Position": "{\"function\":33,\"dialogue_function\":2}",
-	"Dialogue Actor Eye Direction": "{\"function\":33,\"dialogue_function\":4}",
-	"Dialogue Actor Torso Direction": "{\"function\":33,\"dialogue_function\":5}",
-	"Dialogue Actor Animation": "{\"function\":33,\"dialogue_function\":3}",
-	"Dialogue Actor Head Direction": "{\"function\":33,\"dialogue_function\":6}",
-	"Dialogue Actor Omnicient": "{\"function\":33,\"dialogue_function\":7}",
-	"Dialogue Set Camera Position": "{\"function\":33,\"dialogue_function\":8}",
-	"Dialogue Fade To Black": "{\"function\":33,\"dialogue_function\":9}",
-	"Dialogue Settings": "{\"function\":33,\"dialogue_function\":10}",
-	"Comment": "{\"function\":34}",
 	"User Interface Image": "{\"function\":36,\"image_path\":\"Textures/ui/menus/credits/overgrowth.png\",\"position\":[955,215],\"size\":[720,240],\"ui_function\":1}",
 	"User Interface Text": "{\"function\":36,\"position\":[1025,225],\"rotation\":0,\"text_content\":\"Example Text\",\"ui_function\":2,\"use_fade_in\":false,\"use_move_in\":false}",
 	"User Interface Clear": "{\"function\":36,\"ui_function\":0}",
-	"User Interface Font": "{\"function\":36,\"ui_function\":3}",
-	"Checkpoint Save": "{\"function\":37,\"checkpoint_mode\":0}",
-	"Checkpoint Load": "{\"function\":37,\"checkpoint_mode\":1}"
+	"User Interface Font": "{\"function\":36,\"ui_function\":3}"
 }
